--- a/project.json
+++ b/project.json
@@ -1,7 +1,8 @@
 {
   "engine": "cocos2d-html5",
   "packages": "packages",
-  "version": "2.3.2",
+  "version": "2.4.11",
   "name": "NewProject",
-  "id": "99f27875-a518-467c-9311-f47e4ef6b287"
+  "id": "99f27875-a518-467c-9311-f47e4ef6b287",
+  "isNew": false
 }
